# soroban-contracts

./: Cargo.toml  DEPLOYMENT.md
.github/workflows/: sbom.yml
contracts/: walkthrough.md
contracts/carbon_credit_token/: Cargo.toml
contracts/carbon_credit_token/src/: admin.rs  allowance.rs  balance.rs  certificate.rs  events.rs  integration_test.rs  lib.rs  metadata.rs  rbac.rs  retirement.rs  storage.rs  test.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs  test.rs
contracts/rbac/: Cargo.toml
contracts/rbac/src/: error.rs  lib.rs  storage.rs
contracts/verifier_registry/: Cargo.toml
contracts/verifier_registry/src/: error.rs  lib.rs  storage.rs  test.rs
scripts/: deploy_testnet.sh
