[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("testutils"))'] }

[workspace.dependencies]
soroban-sdk = "20.5.0"
verifier-registry = { path = "contracts/verifier_registry" }
carbon-credit-token = { path = "contracts/carbon_credit_token" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
