[package]
name = "carbon_credit_token"
version = "0.1.0"
edition = "2021"
publish = false

[features]
testutils = ["soroban-sdk/testutils"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
rbac        = { path = "../rbac" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
rbac        = { path = "../rbac", features = ["testutils"] }
