[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[features]
testutils = ["soroban-sdk/testutils"]

[lints]
workspace = true

[dependencies]
soroban-sdk = { workspace = true }
carbon_credit_token = { path = "../carbon_credit_token" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
carbon_credit_token = { path = "../carbon_credit_token", features = ["testutils"] }
