[package]
name = "rbac"
version = "0.1.0"
edition = "2021"
publish = false

[features]
testutils = ["soroban-sdk/testutils"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
